@@ -1,7 +1,6 @@
 package com.example.employeemanagementsystem.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -46,7 +45,7 @@ public class DepartmentService {
     public List<DepartmentDto> getAllDepartments() {
         return departmentDao.findAll().stream()
                 .map(departmentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
