@@ -1,7 +1,6 @@
 package com.example.employeemanagementsystem.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -41,7 +40,7 @@ public class RoleService {
     public List<RoleDto> getAllRoles() {
         return roleDao.findAll().stream()
                 .map(roleMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
